fixed body overflow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,8 +54,9 @@ table {
 /* */
 html, body {
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-}
+	font-size: 16px;
+	overflow-x: hidden;
+	overflow-y: scroll;}
 
 /*----------------------------------------------
 	APP
